Fix: Added horizontal scrolling for varients...

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,4 +18,5 @@
     --primary-green: #009E2C;
     --secondary-green: #00B833;
     --primary-skin: #FFF5D2;
+    --selected-addon-grey: #F9F9F9;
 }
